Add. header skeleton code

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,77 @@
 </head>
 <body>
   <header class="header">
-    <div class="search-bar"></div>
-    <div class="nav-bar"></div>
+    <div class="header__top">
+      <div class="header__top__logo">
+        <a href="/">
+          <img src="//search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png" class="img_g" alt="쇼핑하우 by kakaocommerce">
+        </a>
+      </div>
+      <div class="header__top__search-bar">
+        <input class="search-bar__input" placeholder="외장하드케이스"></input>
+        <button class="search-bar__button" type="submit">
+          <span class="search-bar__button__icon"></span>
+        </button>
+      </div>
+    </div>
+    <div class="header__nav-bar">
+      <div class="nav-bar__menus-container">
+        <div class="nav-bar__category">
+          <div class="category__icon"></div>
+          <div class="category__text">카테고리</div>
+        </div>
+        <ul class="nav-bar__main-menu">
+          <li class="main-menu__item">
+            <a href="">핫딜</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="">베스트100</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="">할인특가</a>
+          </li>
+          <li class="main-menu__item">
+            <a href="">기획전</a>
+          </li>
+        </ul>
+        <ul class="nav-bar__theme-menu">
+          <li class="theme-menu__item">
+            <a href="">#건강식품</a>
+          </li>
+          <li class="theme-menu__item">
+            <a href="">#제철음식</a>
+          </li>
+          <li class="theme-menu__item">
+            <a href="">#블루투스이어폰</a>
+          </li>
+          <li class="theme-menu__item">
+            <a href="">#커블체어</a>
+          </li>
+          <li class="theme-menu__item">
+            <a href="">#노트북</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-bar__user">
+        <ul class="nav-bar__user-menu">
+          <li class="user-menu__item">
+            <a href="">
+              <div class="login-container">
+                <div class="login__icon"></div>
+                <div class="login__text">로그인</div>
+              </div>
+            </a>
+          </li>
+          <li class="user-menu__item">
+            <div class="recent-products-container">
+              <div class="recent-products__icon"></div>
+              <div class="recent-products__text">최근본 상품</div>
+              <div class="recent-products__arrow"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
   </header>
   <div class="main-contents-container">
     <section class="banner">
