[ADD] App initialize, Header Component initialize

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
   <head>
     <title>3주차-쇼핑사이트</title>
-    <link rel="stylesheet" type="text/css" href="./index.css"/>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="./index.js"></script>
+    <div id="app">
+      <div id="header"></div>
+      <div id="banner"></div>
+      <div id="items"></div>
+      <div id="hot-theme"></div>
+    </div>
+    <!-- 스크립트와 번들링된 css는 웹팩을 통해 빌드되어 자동 삽입됩니다. -->
   </body>
 </html>
