--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -96,10 +96,11 @@
           <div id="mallEventList" class="top__event-list">
             <div id="mallEventListSlide" class="event-list__slide">
               <div id="mallEventSlide" class="slide"></div>
-              <button class="btn_g btn_prev"><i class="fas fa-chevron-left"></i></button>
-              <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button>
+              <!-- <button class="btn_g btn_prev"><i class="fas fa-chevron-left"></i></button>
+              <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button> -->
             </div>
           </div>
+          <button id="mallEventList_more">더보기</button>
         </article>
 
         <article class="article__hotDeal">
