[express] 폴더 구조 파악 및 역할 공부 / api 작성 및 호출 테스트

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -9,7 +9,8 @@
     <meta property="og:description" content="쇼핑하우 by kakaocommerce는 대한민국 온라인 쇼핑몰들의 상품 정보를 모두 모아 한번에 가격비교가 가능한, 최저가 가격비교 서비스 입니다." />
     <title>쇼핑라쿤 by raccooncommerce</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-    <link rel="stylesheet" type="text/css" href="main.scss" />
+    <link rel="stylesheet" type="text/css" href="./style.scss" />
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/style.css" /> -->
   </head>
   <body>
     <div class="body__container">
@@ -984,5 +985,6 @@
         <a href="#top" class="btn_follow _GC_"><span class="ico_home ico_follow">TOP</span></a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
