[FIX] index.html 템플릿 구조 변경

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,12 @@
   <body>
     <div id="app">
       <div id="header"></div>
-      <div id="banner"></div>
-      <div id="items"></div>
-      <div id="hot-theme"></div>
+
+      <div class="main">
+        <div id="banner"></div>
+        <div id="items"></div>
+        <div id="hot-theme-category"></div>
+      </div>
     </div>
     <!-- 스크립트와 번들링된 css는 웹팩을 통해 빌드되어 자동 삽입됩니다. -->
   </body>
