--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -77,17 +77,7 @@
               <!-- 페이지 넘기는 버튼, 페이지네이션 -->
               <div class="paging_comm">
                 <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
-                <span class="inner_paging slide_pagination">
-                  <!-- <span class="btn_paging" data-index="0">
-                    <span class="num_page"></span>
-                  </span>
-                  <span class="btn_paging" data-index="1">
-                    <span class="num_page"></span>
-                  </span>
-                  <span class="btn_paging" data-index="2">
-                    <span class="num_page"></span>
-                  </span> -->
-                </span>
+                <span class="inner_paging slide_pagination"> </span>
                 <button class="btn_slide btn_next"><i class="fas fa-chevron-right"></i></button>
               </div>
             </div>
@@ -108,202 +98,16 @@
             <div class="title_info">
               <h3>품절주의! 역대급 핫딜</h3>
             </div>
-            <div class="content_item">
-              <ul class="list_item">
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a>
-                    <span class="thumb_hotdeal">
-                      <img src="" alt="" />
-                    </span>
-                    <strong class="title_g">스타벅스 캡슐 100개 특가</strong>
-                    <span class="detail_price">
-                      <span class="info_discount">
-                        <span class="txt_discount">
-                          <span class="txt_unit">원</span>
-                        </span>
-                        <span class="txt_percent">
-                          <span class="txt_unit">%</span>
-                        </span>
-                      </span>
-                      <span class="txt_price"></span>
-                    </span>
-                  </a>
-                </li>
-              </ul>
+            <div class="hotDeal__container">
+              <div class="content_hotDeal"></div>
+              <div class="buttons_hotDeal">
+                <button class="btn_hotDeal_prev"><i class="fas fa-chevron-left"></i></button>
+                <button class="btn_hotDeal_next"><i class="fas fa-chevron-right"></i></button>
+              </div>
             </div>
           </div>
         </article>
+
         <article class="article__keyword">
           <div class="title_info">
             <h3 class="title_home">쇼핑 급상승 키워드</h3>
