[express] api 요청 성공

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -985,6 +985,6 @@
         <a href="#top" class="btn_follow _GC_"><span class="ico_home ico_follow">TOP</span></a>
       </footer>
     </div>
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
