[fetch api] 생애 첫 서버로부터 이미지 호출

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -165,23 +165,7 @@
                 </div>
                 <div class="event--slide">
                   <div class="event--slide--item" id="mileageSilde">
-                    <div class="slide" id="topMileageSlide">
-                      <div class="panel" aria-hidden="true">
-                        <a href="//shoppinghow.kakao.com/event/detail/53420" target="_blank" class="link--event"
-                          ><img src="//shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" width="485" height="340" class="img_g" alt=""
-                        /></a>
-                      </div>
-                      <div class="panel" aria-hidden="false">
-                        <a href="//shoppinghow.kakao.com/event/detail/52969" target="_blank" class="link--event"
-                          ><img src="//shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" width="485" height="340" class="img_g" alt=""
-                        /></a>
-                      </div>
-                      <div class="panel" aria-hidden="true">
-                        <a href="//shoppinghow.kakao.com/siso/p/sale/mall/gmarket" target="_blank" class="link--event"
-                          ><img src="//shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" width="485" height="340" class="img_g" alt=""
-                        /></a>
-                      </div>
-                    </div>
+                    <div class="slide" id="topMileageSlide"></div>
                   </div>
                   <div class="paging--bar">
                     <span class="inner--paging" id="mileageSildePage">
