[Add] scss for articles in main
- html 배치를 위한 scss 작성
- 핫딜 부분 아래 ~ footer 전까지 배치

--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -252,11 +252,11 @@
           <div class="title_info">
             <h3 class="title_home">이 상품 어때요?</h3>
           </div>
-          <div class="thumb_tab">
+          <!-- <div class="thumb_tab">
             <ul class="tab_home"></ul>
             <button class="btn_g, btn_prev"><i class="fas fa-chevron-left"></i></button>
             <button class="btn_g, btn_next"><i class="fas fa-chevron-right"></i></button>
-          </div>
+          </div> -->
           <div class="content_item">
             <div class="item_how">
               <strong class="title_sub">비슷한 관심사의 사람들이 많이 본 상품</strong>
@@ -362,7 +362,7 @@
           </div>
         </article>
       </section>
-      <section clss="main__etc">
+      <section class="main__etc">
         <article class="etc__partner">
           <h3 class="title_home">쇼핑하우 파트너</h3>
           <div class="section_etc">
@@ -599,8 +599,8 @@
                   </li>
                 </ul>
               </div>
+              <button class="btn_home"><i class="fas fa-plus"></i></button>
             </div>
-            <button class="btn_home"><i class="fas fa-plus"></i></button>
           </div>
           <a href="" class="link_all">전체보기<i class="fas fa-chevron-right"></i></a>
         </article>
