[fetch api] 생애 첫 서버로부터 이미지 호출인줄 알았는데 잘못 알았다가 다시 성공 (feat. daisy)

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -165,7 +165,9 @@
                 </div>
                 <div class="event--slide">
                   <div class="event--slide--item" id="mileageSilde">
-                    <div class="slide" id="topMileageSlide"></div>
+                    <div class="slide" id="topMileageSlide">
+                      <!-- getMileageEventContents() -->
+                    </div>
                   </div>
                   <div class="paging--bar">
                     <span class="inner--paging" id="mileageSildePage">
