--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
   </header>
   <main class="col-10">
     <section class="col-10 special-section">
-      <div class="col-4 carousel-none">
-        <a class="carousel__item">
-          <img src="images/m1.png">
-        </a>
+      <div class="col-4 carousel-none" id="bestItemTarget">
       </div>
       <div class="col-6 carousel">
         <div class="carousel__box">
