Feat. get slideData using fetch

--- a/public/index.html
+++ b/public/index.html
@@ -86,17 +86,7 @@
           </div>
           <div class="banner-list slide">
             <div class="slide-list__wrapper">
-              <div class="slide-list">
-                <div class="slide-item">
-                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" />
-                </div>
-                <div class="slide-item">
-                  <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
-                </div>
-                <div class="slide-item">
-                  <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" />
-                </div>
-              </div>
+              <div class="slide-list"></div>
             </div>
             <div class="slide-event">
               <div class="slide-event__btn">
