Feat. get more-item-list using fetch

--- a/public/index.html
+++ b/public/index.html
@@ -101,68 +101,7 @@
             </div>
           </div>
         </div>
-        <ul class="event-item-list">
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="event-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-        </ul>
+        <ul class="event-item-list"></ul>
       </div>
 
       <div class="banner-more">
