Feat. render more-button in js

--- a/public/index.html
+++ b/public/index.html
@@ -104,11 +104,7 @@
         <ul class="event-item-list"></ul>
       </div>
       <div class="banner-more">
-        <div class="more-text-container">
-          <span>더보기</span>
-          <span class="more-index">(1/276건)</span>
-          <span><i class="fas fa-angle-down"></i></span>
-        </div>
+        <div class="more-text-container"></div>
       </div>
       <div class="hot-theme">
         <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
