[Carousel] Slide Page Navigator Carousel 기능 추가

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -164,13 +164,13 @@
                   /></a>
                 </div>
                 <div class="event--slide">
-                  <div class="event--slide--item" id="mileageSilde">
+                  <div class="event--slide--item" id="mileageSlide">
                     <div class="slide" id="topMileageSlide">
                       <!-- getMileageEventContents() -->
                     </div>
                   </div>
                   <div class="paging--bar">
-                    <span class="inner--paging" id="mileageSildePage">
+                    <span class="inner--paging" id="mileageSlidePage">
                       <em class="paging--button first" data-index="0">
                         <span class="page--number"> <span class="screen-out">현재페이지</span>1 </span>
                       </em>
