Feat. 더보기&접기 기능

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <ul class="event-item-list"></ul>
+        <div class="more-container"></div>
       </div>
       <div class="banner-more">
         <div class="more-text-container"></div>
