--- a/public/index.html
+++ b/public/index.html
@@ -106,70 +106,72 @@
       <div class="banner-more">
         <div class="more-text-container"></div>
       </div>
-      <div class="hot-theme">
-        <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
-        <ul class="hot-theme-list">
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-          <li class="hot-theme-item">
-            <a href="">
-              <div class="item-img">
-                <img
-                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                />
-              </div>
-              <div class="item-title">지금은 신품종 전성시대</div>
-              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-              <div class="item-theme">테마</div>
-            </a>
-          </li>
-        </ul>
+      <div class="hot-deal">
+        <h3 class="hot-deal-title">품절주의! 역대급 핫딜</h3>
+        <div class="hot-deal__container">
+          <ul class="hot-deal-list">
+            <li class="hot-deal-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="hot-deal-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="hot-deal-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="hot-deal-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="hot-deal-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </main>
     <script src="src/js/main.js"></script>
