[SCSS] 더보기 버튼  추가

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -547,6 +547,11 @@
                     </li>
                   </ul>
                 </div>
+                <div class="more-item__container">
+                  <button class="more-item__button">
+                    <span>더보기(5/10)</span>
+                  </button>
+                </div>
               </div>
             </div>
             <div class="hot-keyword__wrapper section--hot section--hit" style="display: none"></div>
