--- a/public/index.html
+++ b/public/index.html
@@ -108,22 +108,7 @@
       </div>
       <div class="hot-deal">
         <h3 class="hot-deal-title">품절주의! 역대급 핫딜</h3>
-        <div class="hot-deal__container">
-          <ul class="hot-deal-list">
-            <li class="hot-deal-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">특수부위 3종set 특가</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <div class="hot-deal__container"></div>
       </div>
     </main>
     <script src="src/js/main.js"></script>
