상단 캐러셀 화살표 클릭, 네비게이션 상호작용

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
               <div class="paging-arrow__right" data-arrow="next"></div>
             </div>
             <div class="paging-hover" id="pagingHover">
-              <div class="paging-hover__button active" data-index="1"></div>
-              <div class="paging-hover__button" data-index="2"></div>
-              <div class="paging-hover__button" data-index="0"></div>
+              <div class="paging-hover__button active"></div><div class="paging-hover__button"></div><div class="paging-hover__button" ></div>
             </div>
           </div>
         </div>
