--- a/public/index.html
+++ b/public/index.html
@@ -53,64 +53,45 @@
     </header>
     <div class="main-banner">
         <div class="main-banner__static">
-            <ul class="static__text">
-                <li class="static__text__button">BEST 100</li>
-                <li class="static__text__title">패션 베스트</li>
-                <li class="static__text__underbar"></li>
-                <li class="static__text__desc">올겨울 여성 코디 제안<br>지금 제일 인기있는 스타일만 모아봤어요</li>
-            </ul>
-            <div class="static__img"></div>
+            <a href="#" class="static__link">
+
+            </a>
         </div>
         <div class="main-banner__slide">
-            <ul class="slide__text">
-                <li class="slide__text__button">기획전</li>
-                <li class="slide__text__title">커피메이커</li>
-                <li class="slide__text__underbar"></li>
-                <li class="slide__text__desc">24시 홈카페 오픈!<br>가족과 함께 여유롭게 커피 한잔 어때요?</li>
-            </ul>
-            <div class="slide__img"></div>
+            <a href="#" class="slide__link1">
+
+            </a>
+            <a href="#" class="slide__link2">
+
+            </a>
+            <a href="#" class="slide__link3">
+
+            </a>
+
         </div>
     </div>
     <div class="sub-menu">
         <div class="sub-menu__silde">
             <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
+                <li class="sub-slide__img1"></li>
                 <li class="sub-slide__title"></li>
                 <li class="sub-slide__desc"></li>
                 <li class="sub-slide__theme"></li>
             </ul>
             <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
+                <li class="sub-slide__img2"></li>
                 <li class="sub-slide__title"></li>
                 <li class="sub-slide__desc"></li>
                 <li class="sub-slide__theme"></li>
             </ul>
             <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
+                <li class="sub-slide__img3"></li>
                 <li class="sub-slide__title"></li>
                 <li class="sub-slide__desc"></li>
                 <li class="sub-slide__theme"></li>
             </ul>
             <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
-                <li class="sub-slide__title"></li>
-                <li class="sub-slide__desc"></li>
-                <li class="sub-slide__theme"></li>
-            </ul>
-            <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
-                <li class="sub-slide__title"></li>
-                <li class="sub-slide__desc"></li>
-                <li class="sub-slide__theme"></li>
-            </ul>
-            <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
-                <li class="sub-slide__title"></li>
-                <li class="sub-slide__desc"></li>
-                <li class="sub-slide__theme"></li>
-            </ul>
-            <ul class="sub-slide">
-                <li class="sub-slide__img"></li>
+                <li class="sub-slide__img4"></li>
                 <li class="sub-slide__title"></li>
                 <li class="sub-slide__desc"></li>
                 <li class="sub-slide__theme"></li>
@@ -183,5 +164,9 @@
             </ul>
         </div>
     </div>
+    <form action="/email_post" method="post">
+        email: <input type="text" name="email"><br/>
+        <input type="submit">
+    </form>
 </body>
 </html>
