[Carousel] Paging Navigator Hover 기능 추가

--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -171,14 +171,14 @@
                   </div>
                   <div class="paging--bar">
                     <span class="inner--paging" id="mileageSlidePage">
-                      <em class="paging--button first" data-index="0">
-                        <span class="page--number"> <span class="screen-out">현재페이지</span>1 </span>
+                      <em class="paging--button first adela" data-index="0">
+                        <span class="page--number adela" data-index="0"> <span class="screen-out">현재페이지</span>1 </span>
                       </em>
-                      <span class="paging--button" data-index="1">
-                        <span class="page--number">2</span>
+                      <span class="paging--button adela" data-index="1">
+                        <span class="page--number adela" data-index="1">2</span>
                       </span>
-                      <span class="paging--button" data-index="2">
-                        <span class="page--number">3</span>
+                      <span class="paging--button adela" data-index="2">
+                        <span class="page--number adela" data-index="2">3</span>
                       </span>
                     </span>
                     <button type="button" class="slide--button slide--button--prev" title="이전"><span class="ico--slide ico--prev">이전</span></button>
