Add new Componenet Structure (Processing..) 새로운 컴포넌트 구조 설계 중... 아직 미완성

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="/dist/css/style.bundle.css" />
   </head>
   <body>
-    <div class="app">
-      
-    </div>
+    <div id="app"></div>
     <!-- HTML파일 위치 기준이 아니라 server.js에서 설정한 default 위치를 기준으로 -->
     <script src="/src/js/main.js" type="module"></script>
   </body>
