Add. 캐로셀 이미지를 일단 이미지url로 넣어둠 (서버에서 가져오는 건 나중에)

--- a/public/index.html
+++ b/public/index.html
@@ -112,27 +112,31 @@
             <div class="slide">
               <div class="panel">
                 <a href="">
-                  <img src="" alt="">
+                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="">
                 </a>
               </div>
               <div class="panel">
                 <a href="">
-                  <img src="" alt="">
+                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="">
                 </a>
               </div>
               <div class="panel">
                 <a href="">
-                  <img src="" alt="">
+                  <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="">
                 </a>
               </div>
             </div>
             <div class="paging">
-              <button class="prev-btn"></button>
-              <button class="next-btn"></button>
+              <button class="prev-btn">
+                <i class="fas fa-chevron-left"></i>
+              </button>
+              <button class="next-btn">
+                <i class="fas fa-chevron-right"></i>
+              </button>
               <div class="current-page-mark">
-                <span>1</span>
-                <span>2</span>
-                <span>3</span>
+                <div></div>
+                <div></div>
+                <div></div>
               </div>
             </div>
           </div>
