--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
       <div id="header"></div>
 
       <div class="main">
-        <div id="banner" class="banner"></div>
+        <div id="banner"></div>
         <div id="items"></div>
         <div id="hot-theme-category"></div>
       </div>
