--- a/raccoon-shopping-express/front/index.html
+++ b/raccoon-shopping-express/front/index.html
@@ -976,6 +976,6 @@
         <a href="#top" class="btn_follow _GC_"><span class="ico_home ico_follow">TOP</span></a>
       </footer>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
