Modify. 슬라이더의 보여지는 부분 조정을 위한 구조 수정

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>쇼핑하우 클론</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <script defer src="https://use.fontawesome.com/releases/v5.15.2/js/all.js" integrity="sha384-vuFJ2JiSdUpXLKGK+tDteQZBqNlMwAjhZ3TvPaDfN9QmbPb7Q8qUpbSNapQev3YF" crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
+  <script src="js/index.js" defer></script>
 </head>
 <body>
   <!-- header -->
@@ -108,22 +108,24 @@
               <img src="http://shop4.daumcdn.net/shophow/sib/0_210219174849_FwZShCdZPYIPpJmvgEiGWverDgJVqrrq" alt="home-interior-best">
             </a> 
           </div>
-          <div class="event-slide">
-            <div class="slide">
-              <div class="panel">
-                <a href="">
-                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="">
-                </a>
-              </div>
-              <div class="panel">
-                <a href="">
-                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="">
-                </a>
-              </div>
-              <div class="panel">
-                <a href="">
-                  <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="">
-                </a>
+          <div class="event-slide-wrapper">
+            <div class="event-slide">
+              <div class="slide">
+                <div class="panel">
+                  <a href="">
+                    <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="">
+                  </a>
+                </div>
+                <div class="panel">
+                  <a href="">
+                    <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="">
+                  </a>
+                </div>
+                <div class="panel">
+                  <a href="">
+                    <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="">
+                  </a>
+                </div>
               </div>
             </div>
             <div class="paging">
