Add. hot-deal slide event위한 스타일

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,12 @@
       <div class="hot-deal">
         <h3 class="hot-deal-title">품절주의! 역대급 핫딜</h3>
         <div class="hot-deal__container"></div>
+        <div class="slide-event">
+          <div class="slide-event__btn">
+            <div class="btn-prev" tabindex="-1"><i class="fas fa-chevron-left"></i></div>
+            <div class="btn-next" tabindex="-1"><i class="fas fa-chevron-right"></i></div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="src/js/main.js"></script>
