carousel UI 구현 중..

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="header__top--search">
           <input type="text" placeholder="1. 가정용금고" />
-          <button><img src="./img/검색.png" /></button>
+          <button><img src="./img/검색.png" /></button>
         </div>
       </div>
 
@@ -23,7 +23,7 @@
         <div class="wrap-categori">
           <div class="header__categori--button">
             <button>
-              <img src="./img/카테고리.png" />
+              <img src="./img/카테고리.png" />
               <span>카테고리</span>
             </button>
           </div>
@@ -43,13 +43,13 @@
           <ul class="header__categori--mypage">
             <li>
               <span>
-                <img src="./img/내정보.png" />
+                <img src="./img/내정보.png" />
               </span>
               <span>로그인</span>
             </li>
             <li>
               <span>
-                <img src="./img/최근본상품.png" />
+                <img src="./img/최근본상품.png" />
               </span>
               <span>최근본 상품 ▾</span>
             </li>
@@ -61,29 +61,27 @@
     <article class="contents">
       <div class="pannel">
         <div class="top-pannel">
-          <div class="staticUI">
-            <img src="./img/leftpannel.png" />
+          <div class="wrap-staticUI">
+            <div class="staticUI">
+              <img src="./img/leftpannel.png" />
+            </div>
           </div>
 
           <div class="wrap-carouselUI">
-            <div class="carouselUI">
-              <div class="carouselUI--leftBtn">
-                <button>〈</button>
-              </div>
+            <div class="carouselUI"></div>
 
-              <div class="carouselUI--rightBtn">
-                <button>〉</button>
-              </div>
+            <div class="carouselUI--leftBtn">
+              <button>〈</button>
+            </div>
 
-              <div>
-                <img src="./img/rightpannel1.png" />
-              </div>
+            <div class="carouselUI--rightBtn">
+              <button>〉</button>
+            </div>
 
-              <div class="carouselUI--paging">
-                <span><button></button></span>
-                <span><button></button></span>
-                <span><button></button></span>
-              </div>
+            <div class="carouselUI--paging">
+              <span><button></button></span>
+              <span><button></button></span>
+              <span><button></button></span>
             </div>
           </div>
         </div>
@@ -126,6 +124,6 @@
       </div>
     </article>
 
-    <script src="./js/sample.js"></script>
+    <script src="./js/carouselUI-Manager.js"></script>
   </body>
 </html>
