--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -77,7 +77,7 @@
               <!-- 페이지 넘기는 버튼, 페이지네이션 -->
               <div class="paging_comm">
                 <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
-                <span class="inner_paging slide_pagination"> </span>
+                <span class="inner_paging slide_pagination"></span>
                 <button class="btn_slide btn_next"><i class="fas fa-chevron-right"></i></button>
               </div>
             </div>
@@ -102,8 +102,8 @@
               <div class="content_hotDeal"></div>
             </div>
             <div class="buttons_hotDeal">
-              <button class="btn_hotDeal_prev"><i class="fas fa-chevron-left"></i></button>
-              <button class="btn_hotDeal_next"><i class="fas fa-chevron-right"></i></button>
+              <button class="btn_hotDeal btn_prev"><i class="fas fa-chevron-left"></i></button>
+              <button class="btn_hotDeal btn_next"><i class="fas fa-chevron-right"></i></button>
             </div>
           </div>
         </article>
