Feat. hot-deal slide

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,9 @@
       </div>
       <div class="hot-deal">
         <h3 class="hot-deal-title">품절주의! 역대급 핫딜</h3>
-        <div class="hot-deal__container"></div>
+        <div class="hot-deal__container">
+          <ul class="hot-deal-list"></ul>
+        </div>
         <div class="slide-event">
           <div class="slide-event__btn">
             <div class="btn-prev" tabindex="-1"><i class="fas fa-chevron-left"></i></div>
